--- a/lolquiz.html
+++ b/lolquiz.html
@@ -22,7 +22,7 @@
                 <span class="d-block d-lg-none">LoL Voice Lines Quiz</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2 nav-item" src="lolportraits/yuh.jpg" alt="Man standing in front of the Golden Gate Bridge" /></span>
             </span>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <button class="navbar-togg?raw=trueler" type="button" data-bs-togg?raw=truele="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Togg?raw=truele navigation"><span class="navbar-togg?raw=trueler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link-quiz js-scroll-trigger" href="lolquiz.html">Quiz</a></li>
@@ -39,124 +39,124 @@
                 <hr>
                 <p id="question"></p>
                 <audio id="sfx-playa0" controls>
-                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Urgot_Ban.ogg?raw=true" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/https://github.com/L42cf/projects/blob/main/lolsound/Urgot_Ban.ogg?raw=true?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa1" controls>
-                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Zed_Ban.ogg?raw=true" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/https://github.com/L42cf/projects/blob/main/lolsound/Zed_Ban.ogg?raw=true?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa2" controls>
-                    <source src="lolsound/ChoGath_ban.ogg" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/ChoGath_ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa3" controls>
-                    <source src="lolsound/Diana_ban.ogg" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Diana_ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa4" controls>
-                    <source src="lolsound/Ezreal_ban.ogg" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Ezreal_ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa5" controls>
-                    <source src="lolsound/Aatrox_ban.ogg" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Aatrox_ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa6" controls>
-                    <source src="lolsound/Amumu_ban.ogg" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Amumu_ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa7" controls>
-                    <source src="lolsound/Darius_ban.ogg" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Darius_ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa8" controls>
-                    <source src="lolsound/Jhin_ban.ogg" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Jhin_ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa9" controls>
-                    <source src="lolsound/Cassiopeia_ban.ogg" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Cassiopeia_ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa10" controls>
-                    <source src="lolsound/Lulu_ban.ogg" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Lulu_ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa11" controls>
-                    <source src="lolsound/Ahri_ban.ogg" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Ahri_ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa12" controls>
-                    <source src="lolsound/Lux_ban.ogg" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Lux_ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa13" controls>
-                    <source src="lolsound/Braum_ban.ogg" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Braum_ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa14" controls>
-                    <source src="lolsound/Qiyana_ban.ogg" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Qiyana_ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa15" controls>
-                    <source src="lolsound/Corki_ban.ogg" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Corki_ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa16" controls>
-                    <source src="lolsound/Pyke_ban.ogg" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Pyke_ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa17" controls>
-                    <source src="lolsound/Seraphine_ban.ogg" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Seraphine_ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa18" controls>
-                    <source src="lolsound/Rammus_ban.ogg" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Rammus_ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa19" controls>
-                    <source src="lolsound/Camille_ban.ogg" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Camille_ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa20" controls>
-                    <source src="lolsound/Caitlyn_ban.ogg" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Caitlyn_ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa21" controls>
-                    <source src="lolsound/Elise_ban.ogg" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Elise_ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa22" controls>
-                    <source src="lolsound/BelVeth_ban.ogg" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/BelVeth_ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa23" controls>
-                    <source src="lolsound/Aphelios_ban.ogg" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Aphelios_ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa24" controls>
-                    <source src="lolsound/Evelynn_ban.ogg" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Evelynn_ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa25" controls>
-                    <source src="lolsound/Azir_ban.ogg" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Azir_ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa26" controls>
-                    <source src="lolsound/Ashe_ban.ogg" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Ashe_ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa27" controls>
-                    <source src="lolsound/Blitzcrank_ban.ogg" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Blitzcrank_ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa28" controls>
-                    <source src="lolsound/AurelionSol_ban.ogg" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/AurelionSol_ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa29" controls>
-                    <source src="lolsound/Anivia_ban.ogg" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Anivia_ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa30" controls>
-                    <source src="lolsound/Bard_ban.ogg" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Bard_ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa31" controls>
-                    <source src="lolsound/Morgana_ban.ogg" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Morgana_ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa32" controls>
-                    <source src="lolsound/Ekko_ban.ogg" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Ekko_ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa33" controls>
-                    <source src="lolsound/Annie_ban.ogg" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Annie_ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa34" controls>
-                    <source src="lolsound/Akshan_ban.ogg" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Akshan_ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa35" controls>
-                    <source src="lolsound/Brand_ban.ogg" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Brand_ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa36" controls>
-                    <source src="lolsound/Alistar_ban.ogg" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Alistar_ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa37" controls>
-                    <source src="lolsound/Poppy_ban.ogg" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Poppy_ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa38" controls>
-                    <source src="lolsound/Draven_ban.ogg" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Draven_ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa39" controls>
-                    <source src="lolsound/Akali_ban.ogg" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Akali_ban.ogg?raw=true" id="track">
                 </audio>
 
                 <!-- <div class="audio-player justify-content-center">
@@ -186,7 +186,7 @@
            <div class="questions">
                <h1>Whose voice line is this?</h1>
                <audio controls>
-                <source src="lolsound\Aatrox_Select_new.ogg" type="audio/ogg">
+                <source src="lolsound\Aatrox_Select_new.ogg?raw=true" type="audio/ogg?raw=true">
               </audio>
               <label>
                 <img src="lolportraits\AatroxSquare.webp" alt="">
