--- a/lolquiz.html
+++ b/lolquiz.html
@@ -45,119 +45,119 @@
                     <source src="https://github.com/L42cf/projects/blob/main/https://github.com/L42cf/projects/blob/main/lolsound/Zed_Ban.ogg?" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa2" controls>
-                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/ChoGath_ban.ogg?raw=true" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/ChoGath_Ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa3" controls>
-                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Diana_ban.ogg?raw=true" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Diana_Ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa4" controls>
-                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Ezreal_ban.ogg?raw=true" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Ezreal_Ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa5" controls>
-                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Aatrox_ban.ogg?raw=true" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Aatrox_Ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa6" controls>
-                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Amumu_ban.ogg?raw=true" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Amumu_Ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa7" controls>
-                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Darius_ban.ogg?raw=true" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Darius_Ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa8" controls>
-                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Jhin_ban.ogg?raw=true" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Jhin_Ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa9" controls>
-                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Cassiopeia_ban.ogg?raw=true" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Cassiopeia_Ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa10" controls>
-                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Lulu_ban.ogg?raw=true" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Lulu_Ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa11" controls>
-                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Ahri_ban.ogg?raw=true" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Ahri_Ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa12" controls>
-                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Lux_ban.ogg?raw=true" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Lux_Ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa13" controls>
-                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Braum_ban.ogg?raw=true" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Braum_Ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa14" controls>
-                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Qiyana_ban.ogg?raw=true" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Qiyana_Ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa15" controls>
-                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Corki_ban.ogg?raw=true" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Corki_Ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa16" controls>
-                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Pyke_ban.ogg?raw=true" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Pyke_Ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa17" controls>
-                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Seraphine_ban.ogg?raw=true" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Seraphine_Ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa18" controls>
-                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Rammus_ban.ogg?raw=true" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Rammus_Ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa19" controls>
-                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Camille_ban.ogg?raw=true" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Camille_Ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa20" controls>
-                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Caitlyn_ban.ogg?raw=true" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Caitlyn_Ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa21" controls>
-                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Elise_ban.ogg?raw=true" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Elise_Ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa22" controls>
-                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/BelVeth_ban.ogg?raw=true" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/BelVeth_Ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa23" controls>
-                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Aphelios_ban.ogg?raw=true" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Aphelios_Ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa24" controls>
-                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Evelynn_ban.ogg?raw=true" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Evelynn_Ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa25" controls>
-                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Azir_ban.ogg?raw=true" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Azir_Ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa26" controls>
-                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Ashe_ban.ogg?raw=true" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Ashe_Ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa27" controls>
-                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Blitzcrank_ban.ogg?raw=true" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Blitzcrank_Ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa28" controls>
-                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/AurelionSol_ban.ogg?raw=true" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/AurelionSol_Ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa29" controls>
-                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Anivia_ban.ogg?raw=true" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Anivia_Ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa30" controls>
-                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Bard_ban.ogg?raw=true" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Bard_Ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa31" controls>
-                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Morgana_ban.ogg?raw=true" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Morgana_Ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa32" controls>
-                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Ekko_ban.ogg?raw=true" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Ekko_Ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa33" controls>
-                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Annie_ban.ogg?raw=true" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Annie_Ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa34" controls>
-                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Akshan_ban.ogg?raw=true" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Akshan_Ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa35" controls>
-                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Brand_ban.ogg?raw=true" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Brand_Ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa36" controls>
-                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Alistar_ban.ogg?raw=true" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Alistar_Ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa37" controls>
-                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Poppy_ban.ogg?raw=true" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Poppy_Ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa38" controls>
-                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Draven_ban.ogg?raw=true" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Draven_Ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa39" controls>
-                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Akali_ban.ogg?raw=true" id="track">
-                </audio>
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Akali_Ban.ogg?raw=true" id="track">
+                </audio>https://github.com/L42cf/projects/blob/main/lolsound/Akali_Ban.ogg?raw=true
 
                 <!-- <div class="audio-player justify-content-center">
                     <audio id="playa" controls>
